testing junit parametization / getting CQL tests working on circle CI; please ignore

--- a/atlasdb-container-test-utils/src/main/resources/docker-compose-cassandra.yml
+++ b/atlasdb-container-test-utils/src/main/resources/docker-compose-cassandra.yml
@@ -7,3 +7,5 @@ services:
       - MAX_HEAP_SIZE=$CASSANDRA_MAX_HEAP_SIZE
       - HEAP_NEWSIZE=$CASSANDRA_HEAP_NEWSIZE
       - LOCAL_JMX=no
+      - MAX_HEAP_SIZE=800M
+      - HEAP_NEWSIZE=360M
