--- a/atlasdb-client/build.gradle
+++ b/atlasdb-client/build.gradle
@@ -32,6 +32,8 @@ dependencies {
   compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind'
   compile group: 'com.fasterxml.jackson.core', name: 'jackson-core'
   compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-guava'
+  compile group: 'com.palantir.remoting1', name: 'tracing'
+
   testCompile group: 'junit', name: 'junit'
   testCompile group: 'org.mockito', name: 'mockito-core'
   testCompile group: "org.jmock", name: "jmock", version: libVersions.jmock
