--- a/atlasdb-cli/build.gradle
+++ b/atlasdb-cli/build.gradle
@@ -4,7 +4,7 @@ apply from: '../gradle/shared.gradle'
 apply plugin: 'org.inferred.processors'
 
 dependencies {
-    compile project(':atlasdb-cassandra')
+    compile project(path: ':atlasdb-cassandra', configuration: 'shadow')
     compile project(path: ':atlasdb-dagger', configuration: 'shadow')
     compile 'io.airlift:airline:0.7'
 
