--- a/atlasdb-container-test-utils/build.gradle
+++ b/atlasdb-container-test-utils/build.gradle
@@ -5,7 +5,7 @@ apply from: "${rootProject.projectDir}/gradle/shared.gradle"
 
 dependencies {
     compile project(':atlasdb-api')
-    compile project(':atlasdb-cassandra')
+    compile project(path: ':atlasdb-cassandra', configuration: 'shadow')
     compile project(':atlasdb-docker-test-utils')
 
     compile group: 'com.google.guava', name: 'guava'
