--- a/atlasdb-perf/build.gradle
+++ b/atlasdb-perf/build.gradle
@@ -11,7 +11,7 @@ dependencies {
   compile project(':atlasdb-api')
   compile project(':atlasdb-dagger')
   compile project(':atlasdb-dbkvs')
-  compile project(':atlasdb-cassandra')
+  compile project(path: ':atlasdb-cassandra', configuration: 'shadow')
 
   compile group: 'io.airlift', name: 'airline', version: '0.7'
   compile group: 'org.reflections', name: 'reflections', version: '0.9.10'
